# MetroPulse

./: .gitignore  Readme.md
Backend/: .gitignore  app.py  env_example.txt  logger.py  main.py  pyproject.toml  requirements.txt
Backend/event_summary_agent/: de_dup.py  event_summary.py  parallel_agent.py  prompt.py  utils.py  video_summary.py
Backend/parallel_agent_setup/: Dockerfile  app.py  app.yaml  deploy.sh  event_summary_agent.py  main.py  media_summary_agent.py  overall_summary.py  prompts.py  requirements.txt  sample.py  sample_data.txt  utils.py
Backend/user_report_agent/: agent.py  prompt.py
Backend/user_report_agent/media_summary_agent/: __init__.py  agent.py  prompt.py
Frontend/: .gitignore  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
Frontend/src/: App.tsx  (+4 more)
metro_ai/: .dockerignore  .gcloudignore  Dockerfile  README.md  agent.py  deploy.sh  main.py  pyproject.toml  requirements.txt  setup_gcp.sh
metro_ai/agents/: corrector_agent.py  final_processor_agent.py
metro_ai/agents/common_tools/: data_handler.py  schemas.py  storage.py
metro_ai/agents/concert_agent/: agent.py
metro_ai/agents/movie_agent/: agent.py
metro_ai/agents/orchestrator_agent/: agent.py
metro_ai/agents/restaurant_agent/: agent.py
metro_ai/metro_agent/: prompt.py
metro_ai/metroai/: agent.py
metro_ai/src/deployment/: local.py  remote.py
metro_ai/src/metro_agent/: .env.example  agent.py
metro_ai/subagents/concert_agent/: agent.py
metro_ai/subagents/movies_agent/: agent.py
metro_ai/subagents/restaurant_agent/: agent.py
(+46 files in other folders)
