[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metro-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cloudpickle>=3.1.1",
  "google-adk>=1.7.0",
  "google-cloud-aiplatform[adk,agent-engines]>=1.104.0",
  "python-dotenv>=1.1.1",
]

[project.entry-points."console_scripts"]
deploy-local = "deployment.local:main"
deploy-remote = "deployment.remote:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["metro_agent*", "deployment*"]
